Fix width of code chunks on mobile

--- a/assets/styles/components/syntax-highlighting.pcss
+++ b/assets/styles/components/syntax-highlighting.pcss
@@ -1,1 +1,4 @@
+pre[class^="language-"] {
+  /* <pre> doesn't behav nicely width-wise, so force a max with of screen width minus mobile padding. */
+  max-width: calc( 100vw - 2rem );
 }
